--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main class="container">
 
         <header class="hero">
+            <img src="profile.jpg" alt="عکس پروفایل حمید مقامی" class="profile-pic">
             <h1 class="hero__name">حمید مقامی</h1>
             <h2 class="hero__title">
                 تحلیلگر کمی مالی  |  تحلیلگر داده  |  متخصص یادگیری ماشین
