--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حمید مقامی - تحلیلگر کمی مالی</title>
+    <title>HamidMaghami</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
             <img src="profile.jpg" alt="عکس پروفایل حمید مقامی" class="profile-pic">
             <h1 class="hero__name">حمید مقامی</h1>
             <h2 class="hero__title">
-                تحلیلگر کمی مالی  |  تحلیلگر داده  |  متخصص یادگیری ماشین
+                تحلیلگر کمی مالی  |  تحلیلگر داده  | علاقه‌مند یادگیری ماشین
             </h2>
             <p class="hero__summary">
                 کارشناس ارشد مدیریت مالی با پیش‌زمینه مهندسی برق، متخصص در <strong>تحلیل‌های کمی (Quantitative)</strong> و پیاده‌سازی مدل‌های <strong>یادگیری ماشین</strong> برای پیش‌بینی بازارهای مالی. دارای تسلط بر <strong>پایتون</strong> و الگوریتم‌هایی نظیر <strong>XGBoost</strong> برای حل مسائل پیچیده داده‌محور. آماده تعریف و اجرای <strong>پروژه‌های فناورانه و تحقیقاتی</strong> (در قالب امریه/پروژه جایگزین خدمت) جهت حل چالش‌های مبتنی بر داده.
