--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 تحلیلگر کمی مالی  |  تحلیلگر داده  | علاقه‌مند یادگیری ماشین
             </h2>
             <p class="hero__summary">
-                کارشناس ارشد مدیریت مالی با پیش‌زمینه مهندسی برق، متخصص در <strong>تحلیل‌های کمی (Quantitative)</strong> و پیاده‌سازی مدل‌های <strong>یادگیری ماشین</strong> برای پیش‌بینی بازارهای مالی. دارای تسلط بر <strong>پایتون</strong> و الگوریتم‌هایی نظیر <strong>XGBoost</strong> برای حل مسائل پیچیده داده‌محور. آماده تعریف و اجرای <strong>پروژه‌های فناورانه و تحقیقاتی</strong> (در قالب امریه/پروژه جایگزین خدمت) جهت حل چالش‌های مبتنی بر داده.
+                کارشناس ارشد مدیریت مالی با پیش‌زمینه مهندسی برق، فعال در <strong>تحلیل‌های کمی (Quantitative)</strong> و پیاده‌سازی مدل‌های <strong>یادگیری ماشین</strong> برای پیش‌بینی بازارهای مالی و ریسک . دارای تسلط بر <strong>پایتون</strong> و الگوریتم‌هایی نظیر <strong>XGBoost , LSTM </strong> برای حل مسائل پیچیده داده‌محور. آماده تعریف و اجرای <strong>پروژه‌های فناورانه و تحقیقاتی</strong>  جهت حل چالش‌های مبتنی بر داده.
             </p>
             <div class="hero__links">
                 <a href="https://linkedin.com/in/hamidmaghami" target="_blank" title="لینکدین"><i class="fab fa-linkedin"></i></a>
@@ -43,9 +43,7 @@
                 <span class="skill-tag">Time Series Forecasting</span>
                 <span class="skill-tag">Quantitative Analysis</span>
                 <span class="skill-tag">Financial Modeling</span>
-                <span class="skill-tag">Stock Valuation</span>
-                <span class="skill-tag">Git & GitHub</span>
-                <span class="skill-tag">MS Office (Excel پیشرفته)</span>
+                <span class="skill-tag">Office</span>
             </div>
         </section>
 
@@ -53,7 +51,7 @@
             <h2><i class="fas fa-code-branch"></i> پروژه‌های منتخب</h2>
             
             <article class="project-card">
-                <h3>پیش‌بینی قیمت سهام با XGBoost مبتنی بر تفاضلات کسری</h3>
+                <h3> پیش‌بینی قیمت سهام با روش XGBoost مبتنی بر تفاضلات کسری</h3>
                 <p>
                     توسعه و پیاده‌سازی یک مدل پیشرفته یادگیری ماشین (XGBoost) برای پیش‌بینی نوسانات قیمت سهام. در این پژوهش (پایان‌نامه کارشناسی ارشد) از تکنیک تفاضلات کسری (Fractional Differentiation) برای بهینه‌سازی سری‌های زمانی و افزایش پایداری (Stationarity) داده‌ها استفاده گردید که منجر به افزایش دقت مدل شد.
                 </p>
@@ -100,7 +98,7 @@
                     <strong>دانشگاه خاتم</strong> (موسسه مرکز پژوهش‌های پیشرفته تهران)
                 </p>
                 <p class="education-thesis">
-                    <strong>پایان‌نامه:</strong> پیش‌بینی قیمت سهام به روش ماشین لرنینگ (الگوریتم XGBoost) مبتنی بر تفاضلات کسری.
+                    <strong>پایان‌نامه:</strong> پیش‌بینی قیمت سهام به روش یادگیری ماشین (الگوریتم XGBoost) مبتنی بر تفاضلات کسری.
                 </p>
             </div>
             
@@ -115,7 +113,7 @@
     </main>
 
     <footer class="footer">
-        <p>تمامی حقوق این سایت متعلق به حمید مقامی است.</p>
+        <p>ساخته شده توسط حمید مقامی .</p>
     </footer>
 
 </body>
