--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </main>
 
     <footer class="footer">
-        <p>ساخته شده توسط حمید مقامی .</p>
+        <p>ساخته شده توسط حمید مقامی </p>
     </footer>
 
 </body>
