--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <article class="project-card">
                 <h3> پیش‌بینی قیمت سهام با روش XGBoost مبتنی بر تفاضلات کسری</h3>
                 <p>
-                    توسعه و پیاده‌سازی یک مدل پیشرفته یادگیری ماشین (XGBoost) ...
+                    توسعه و پیاده‌سازی یک مدل پیشرفته یادگیری ماشین جهت پیش بینی قیمت سهام
                 </p>
                 <div class="project-tags">
                     <span>Python</span>
