--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="hero-text-block">
                     <h1 class="hero__name">حمید مقامی</h1>
                     <h2 class="hero__title">
-                        تحلیلگر کمی مالی  |  تحلیلگر داده  | علاقه‌مند یادگیری ماشین
+                        تحلیلگر کمی مالی  |  تحلیلگر داده  | یادگیری ماشین
                     </h2>
                 </div>
                 
