--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             
             <article class="project-card">
                 <h3> پیش‌بینی قیمت سهام با روش XGBoost مبتنی بر تفاضلات کسری</h3>
+                نقش:
+                Machine Learning Researcher & Model Developer
+                هدف پروژه:
+                طراحی یک مدل Data-Driven برای Forecasting سری‌های زمانی مالی با رفتار Non-Stationary، به‌گونه‌ای که هم Memory Structure داده حفظ شود و هم دقت پیش‌بینی نسبت به مدل‌های کلاسیک افزایش یابد.
+                چالش:
+                در بازارهای مالی، داده‌ها ناایستا هستند و مدل‌های سنتی مانند ARIMA در پیش‌بینی پایدار دچار خطا و افت عملکرد می‌شوند.
+                برای رفع این چالش از تکنیک Fractional Differencing استفاده شد تا داده‌ها Stationary شوند بدون اینکه Dependency & Long Memory Pattern حذف شود.
                 <p>
                     توسعه و پیاده‌سازی یک مدل پیشرفته یادگیری ماشین جهت پیش بینی قیمت سهام
                 </p>
