--- a/index.html
+++ b/index.html
@@ -50,15 +50,25 @@
                 <p>
                     توسعه و پیاده‌سازی یک مدل پیشرفته یادگیری ماشین جهت پیش بینی قیمت سهام
                 </p>
+                <p>
+                  <strong>نقش:</strong><br>
+                  Machine Learning Researcher &amp; Model Developer
                 </p>
-                    نقش:
-                    Machine Learning Researcher & Model Developer
-                    هدف پروژه:
-                    طراحی یک مدل Data-Driven برای Forecasting سری‌های زمانی مالی با رفتار Non-Stationary، به‌گونه‌ای که هم Memory Structure داده حفظ شود و هم دقت پیش‌بینی نسبت به مدل‌های کلاسیک افزایش یابد.
-                    چالش:
-                    در بازارهای مالی، داده‌ها ناایستا هستند و مدل‌های سنتی مانند ARIMA در پیش‌بینی پایدار دچار خطا و افت عملکرد می‌شوند.
-                    برای رفع این چالش از تکنیک Fractional Differencing استفاده شد تا داده‌ها Stationary شوند بدون اینکه Dependency & Long Memory Pattern حذف شود.
+
+                <p>
+                  <strong>هدف پروژه:</strong><br>
+                  طراحی یک مدل <strong>Data-Driven</strong> برای <strong>Forecasting</strong> سری‌های زمانی مالی با رفتار
+                  <strong>Non-Stationary</strong>، به‌گونه‌ای که هم <strong>Memory Structure</strong> داده حفظ شود و هم دقت پیش‌بینی
+                  نسبت به مدل‌های کلاسیک افزایش یابد.
                 </p>
+
+                <p>
+                  <strong>چالش:</strong><br>
+                  در بازارهای مالی، داده‌ها ناایستا هستند و مدل‌های سنتی مانند <span dir="ltr">ARIMA</span> در پیش‌بینی پایدار دچار
+                  افت عملکرد می‌شوند. برای رفع این چالش از تکنیک <span dir="ltr">Fractional Differencing</span> استفاده شد تا داده‌ها
+                  <span dir="ltr">Stationary</span> شوند بدون اینکه <span dir="ltr">Dependency &amp; Long Memory Pattern</span> حذف شود.
+                </p>
+
                 <div class="project-tags">
                     <span>Python</span>
                     <span>XGBoost</span>
